introduction paragraph spacing fix?

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h2 {
 }
 
 #intropad {
-  padding: 50px;
+  padding: 25px;
 }
 
 
@@ -191,4 +191,8 @@ h2 {
 #firstp {
   text-align: center;
   max-width: 95%;
+}
+
+#subintropad {
+  padding: 5px;
 }
